# ESP32-C3-SPD-Reader

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults  sdkconfig.dev.defaults  sdkconfig.old  sdkconfig.release.defaults
.github/workflows/: build.yml
main/: CMakeLists.txt  ble_prov.c  ble_prov.h  config_store.c  config_store.h  main.c  oled.c  oled.cpp  oled.h  ota_manager.c  ota_manager.h  project_config.h  speed_output.c  speed_output.h  wifi_sta.c  wifi_sta.h
